--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "sass": "^1.60.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
