--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
