--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
